--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -56,7 +56,7 @@ h5netcdf==1.3.0
 h5py==3.11.0
 hpack==4.0.0
 httpcore==1.0.5
-httpstan==4.12.0
+httpstan==4.10.1
 httpx==0.27.0
 hyperframe==6.0.1
 idna==3.7
@@ -102,6 +102,7 @@ mdit-py-plugins==0.4.1
 mdurl==0.1.2
 mistune==3.0.2
 ml-dtypes==0.4.0
+mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
 nbclient==0.10.0
@@ -115,7 +116,7 @@ numdifftools==0.9.41
 numpy==1.26.4
 opt-einsum==3.3.0
 overrides==7.7.0
-packaging==24.0
+packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 paramiko==3.4.0
@@ -139,8 +140,8 @@ Pygments==2.18.0
 pylev==1.4.0
 PyNaCl==1.5.0
 pyparsing==3.1.2
-pysimdjson==6.0.2
-pystan==3.9.1
+pysimdjson==5.0.2
+pystan==3.7.0
 pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
@@ -166,6 +167,7 @@ soupsieve==2.5
 stack-data==0.6.3
 statsmodels==0.14.2
 stein-thinning==1.1
+sympy==1.12.1
 tblib==3.0.0
 terminado==0.18.1
 tinycss2==1.3.0
