--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ report/build/*.blg
 report/build/*.log
 report/build/*.synctex.gz
 report/build/*.toc
+report/build/*.bcf
+report/build/*.out
+report/build/*.run.xml
 
 code/.venv
 code/build
