--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -33,6 +33,7 @@ crashtest==0.3.1
 cryptography==42.0.8
 cycler==0.12.1
 dask==2024.5.2
+dcor==0.6
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
@@ -56,7 +57,7 @@ h5netcdf==1.3.0
 h5py==3.11.0
 hpack==4.0.0
 httpcore==1.0.5
-httpstan==4.10.1
+httpstan==4.13.0
 httpx==0.27.0
 hyperframe==6.0.1
 idna==3.7
@@ -72,6 +73,7 @@ jaxlib==0.4.28
 jedi==0.19.1
 Jinja2==3.1.4
 jmespath==1.0.1
+joblib==1.4.2
 json5==0.9.25
 jsondiff==2.0.0
 jsonpointer==2.4
@@ -140,8 +142,8 @@ Pygments==2.18.0
 pylev==1.4.0
 PyNaCl==1.5.0
 pyparsing==3.1.2
-pysimdjson==5.0.2
-pystan==3.7.0
+pysimdjson==6.0.2
+pystan==3.10.0
 pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
@@ -159,14 +161,16 @@ rpds-py==0.18.1
 rsa==4.7.2
 s3transfer==0.10.1
 scipy==1.13.1
+seaborn==0.13.2
 Send2Trash==1.8.3
+setuptools==72.1.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.3
 statsmodels==0.14.2
-stein-thinning==1.1
+-e git+ssh://git@github.com/aglebov/stein_thinning.git@a8ae0853f4a18f9e5c29dba64df02d10fb11d017#egg=stein_thinning
 sympy==1.12.1
 tblib==3.0.0
 terminado==0.18.1
@@ -185,6 +189,7 @@ webargs==8.4.0
 webcolors==24.6.0
 webencodings==0.5.1
 websocket-client==1.8.0
+wheel==0.43.0
 widgetsnbextension==4.0.11
 wrapt==1.16.0
 xarray==2024.5.0
