Use the latest version of stein-thinning from GitHub in pyproject.toml

--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "arviz",
     "jax",
     "dask[distributed]",
-    "stein_thinning",
+    "stein_thinning @ git+https://github.com/wilson-ye-chen/stein_thinning",
     "dcor",
     "numdifftools",
     "scikit-learn",
