--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,13 @@ dependencies = [
     "s3fs",
     "pytest",
 ]
-requires-python = ">=3.9,<=3.12"
+requires-python = ">=3.9,<3.13"
 
 [project.urls]
 Homepage = "https://github.com/aglebov/gradient-free-mcmc-postprocessing"
+
+[tool.setuptools]
+package-dir = {"" = "code/src"}
 
 [tool.bumpver]
 current_version = "0.1.0"
